v7

- finally craftbukkit 1.13+ support, yay!
- added a license text (gpl v3), please read it at least once

v6

- extend compatibility through reflection
- various code optimizations
- changed outside golem spawn area color from yellow to magenta to stay header always yellow

v5.194

- changes compatibility to minecraft 1.9.4

v5.190

- changes compatibility to minecraft 1.9

v5.183
- fix no village found because plugin loaded before world, thanks to lululombard

v4.183
- optimized code and output format

v3.183

- add permissions system compatibility
- add localization support

v2.183

- fix golem spawn area calculation
- this build v2.179 compiled for craftbukkit 1.8.3

v1.183

- initial release, compatible with craftbukkit 1.8.4 only
- todo (maybe): add aggressors information if possible